# delta

./: Cargo.toml  README.md
examples/: basic.rs
src/: lib.rs
src/tensor/: mod.rs  shape.rs  storage.rs  tensor.rs
